--- a/packages/2.x/Html.html
+++ b/packages/2.x/Html.html
@@ -97,9 +97,9 @@
 <p>Alternatively, <a href="https://github.com/auraphp/Aura.Html/releases">download a release</a> or clone this repository, then require or include its <em>autoload.php</em> file.</p>
 <h3 id="4-8-1-2">4.8.1.2. Quality</h3>
 <p><a href="https://scrutinizer-ci.com/g/auraphp/Aura.Html/"><img src="https://scrutinizer-ci.com/g/auraphp/Aura.Html/badges/quality-score.png?b=2.x" alt="Scrutinizer Code Quality"></a>
-<a href="https://scrutinizer-ci.com/g/auraphp/Aura.Html/"><img src="https://scrutinizer-ci.com/g/auraphp/Aura.Html/badges/coverage.png?b=2.x" alt="Code Coverage"></a>
-<a href="https://travis-ci.org/auraphp/Aura.Html"><img src="https://travis-ci.org/auraphp/Aura.Html.png?branch=2.x" alt="Build Status"></a></p>
-<p>To run the unit tests at the command line, issue <code>composer install</code> and then <code>phpunit</code> at the package root. This requires <a href="http://getcomposer.org/">Composer</a> to be available as <code>composer</code>, and <a href="http://phpunit.de/manual/">PHPUnit</a> to be available as <code>phpunit</code>.</p>
+<a href="https://codecov.io/gh/auraphp/Aura.Html"><img src="https://codecov.io/gh/auraphp/Aura.Html/branch/2.x/graph/badge.svg?token=UASDouLxyc" alt="codecov"></a>
+<a href="https://github.com/auraphp/Aura.Html/actions/workflows/continuous-integration.yml"><img src="https://github.com/auraphp/Aura.Html/actions/workflows/continuous-integration.yml/badge.svg?branch=2.x" alt="Continuous Integration"></a></p>
+<p>To run the unit tests at the command line, issue <code>composer install</code> and then <code>vendor/bin/phpunit</code> at the package root. This requires <a href="http://getcomposer.org/">Composer</a> to be available as <code>composer</code>.</p>
 <p>This library attempts to comply with <a href="https://github.com/php-fig/fig-standards/blob/master/accepted/PSR-1-basic-coding-standard.md">PSR-1</a>, <a href="https://github.com/php-fig/fig-standards/blob/master/accepted/PSR-2-coding-style-guide.md">PSR-2</a>, and <a href="https://github.com/php-fig/fig-standards/blob/master/accepted/PSR-4-autoloader.md">PSR-4</a>. If
 you notice compliance oversights, please send a patch via pull request.</p>
 <h3 id="4-8-1-3">4.8.1.3. Community</h3>
