--- a/packages/2.x/View.html
+++ b/packages/2.x/View.html
@@ -101,9 +101,9 @@
 <p>It is installable and autoloadable via Composer as <a href="https://packagist.org/packages/aura/view">aura/view</a>.</p>
 <p>Alternatively, <a href="https://github.com/auraphp/Aura.View/releases">download a release</a> or clone this repository, then require or include its <em>autoload.php</em> file.</p>
 <h3 id="4-15-1-2">4.15.1.2. Quality</h3>
-<p><a href="https://scrutinizer-ci.com/g/auraphp/Aura.View/"><img src="https://scrutinizer-ci.com/g/auraphp/Aura.View/badges/quality-score.png?b=develop-2" alt="Scrutinizer Code Quality"></a>
-<a href="https://scrutinizer-ci.com/g/auraphp/Aura.View/"><img src="https://scrutinizer-ci.com/g/auraphp/Aura.View/badges/coverage.png?b=develop-2" alt="Code Coverage"></a>
-<a href="https://travis-ci.org/auraphp/Aura.View"><img src="https://travis-ci.org/auraphp/Aura.View.png?branch=develop-2" alt="Build Status"></a></p>
+<p><a href="https://scrutinizer-ci.com/g/auraphp/Aura.View/"><img src="https://scrutinizer-ci.com/g/auraphp/Aura.View/badges/quality-score.png?b=2.x" alt="Scrutinizer Code Quality"></a>
+<a href="https://codecov.io/gh/auraphp/Aura.View"><img src="https://codecov.io/gh/auraphp/Aura.View/branch/2.x/graph/badge.svg?token=UASDouLxyc" alt="codecov"></a>
+<a href="https://github.com/auraphp/Aura.View/actions/workflows/continuous-integration.yml"><img src="https://github.com/auraphp/Aura.View/actions/workflows/continuous-integration.yml/badge.svg?branch=2.x" alt="Continuous Integration"></a></p>
 <p>To run the unit tests at the command line, issue <code>composer install</code> and then <code>./vendor/bin/phpunit</code> at the package root. This requires <a href="http://getcomposer.org/">Composer</a> to be available as <code>composer</code>.</p>
 <p>This library attempts to comply with <a href="https://github.com/php-fig/fig-standards/blob/master/accepted/PSR-1-basic-coding-standard.md">PSR-1</a>, <a href="https://github.com/php-fig/fig-standards/blob/master/accepted/PSR-2-coding-style-guide.md">PSR-2</a>, and <a href="https://github.com/php-fig/fig-standards/blob/master/accepted/PSR-4-autoloader.md">PSR-4</a>. If
 you notice compliance oversights, please send a patch via pull request.</p>
@@ -375,8 +375,19 @@ $view_registry-&gt;setPaths(array(
 ?&gt;
 </code></pre>
 <p>When we refer to named templates later, the registry will search from the first directory to the last. For finer control over the search paths, we can call <code>prependPath()</code> to add a directory to search earlier, or <code>appendPath()</code> to add a directory to search later. Regardless, the <em>View</em> will auto-append <code>.php</code> to the end of template names when searching through the directories.</p>
+<h4 id="4-15-2-12-1">4.15.2.12.1. Template Namespaces</h4>
+<p>We can also add namespaced templates which we can refer to with the syntax <code>namespace::template</code>.
+We can add directories that correspond to namespaces:</p>
+<pre><code class="language-php">&lt;?php
+$view_registry = $view-&gt;getViewRegistry();
+$view_registry-&gt;appendPath('/path/to/templates', 'my-namespace');
+
+$view-&gt;setView('my-namespace::browse');
+</code></pre>
+<p>When we refer to namespaced templates, only the paths associated with that
+namespace will be searched.</p>
 <h3 id="4-15-2-13">4.15.2.13. Changing The Template File Extension</h3>
-<p>By default, each <em>TemplateRegistry</em> will auto-append <code>.php</code> to template file names. If the template files end with a different extension, change it usin the <code>setTemplateFileExtension()</code> method:</p>
+<p>By default, each <em>TemplateRegistry</em> will auto-append <code>.php</code> to template file names. If the template files end with a different extension, change it using the <code>setTemplateFileExtension()</code> method:</p>
 <pre><code class="language-php">&lt;?php
 $view_registry = $view-&gt;getViewRegistry();
 $view_registry-&gt;setTemplateFileExtension('.phtml');
@@ -404,7 +415,7 @@ $view = $view_factory-&gt;newInstance(
     ],
     [
         'layout' =&gt; '/path/to/layouts/default.php'
-    ],    
+    ],
     [
         '/path/to/layouts',
     ],
