--- a/packages/4.x/Di/index.html
+++ b/packages/4.x/Di/index.html
@@ -79,89 +79,89 @@
 <nav class="navheader">
     <table>
         <tr>
-            <th colspan="3" class="curr">2.1. Aura.Di</th>
+            <th colspan="3" class="curr">2.2. Aura.Di</th>
         </tr>
         <tr>
-            <td class="prev"><a href="/packages/4.x/">Version 4.x</a></td>
+            <td class="prev"><a href="/packages/4.x/Accept/getting-started.html">Aura.Accept</a></td>
             <td class="parent">2. Version 4.x</th>
             <td class="next"><a href="/packages/4.x/Di/getting-started.html">Getting Started</a></td>
         </tr>
     </table>
 </nav>
 
-<h1>2.1. Aura.Di</h1>
+<h1>2.2. Aura.Di</h1>
 <dl>
-<dt>2.1.1. <a href="/packages/4.x/Di/getting-started.html#2-1-1">Getting Started</a></dt>
+<dt>2.2.1. <a href="/packages/4.x/Di/getting-started.html#2-2-1">Getting Started</a></dt>
 <dd><dl>
-<dt>2.1.1.1. <a href="/packages/4.x/Di/getting-started.html#2-1-1-1">Overview</a></dt>
+<dt>2.2.1.1. <a href="/packages/4.x/Di/getting-started.html#2-2-1-1">Overview</a></dt>
 <dd><dl>
-<dt>2.1.1.1.1. <a href="/packages/4.x/Di/getting-started.html#2-1-1-1-1">Intended Usage</a></dt>
+<dt>2.2.1.1.1. <a href="/packages/4.x/Di/getting-started.html#2-2-1-1-1">Intended Usage</a></dt>
 </dl></dd>
-<dt>2.1.1.2. <a href="/packages/4.x/Di/getting-started.html#2-1-1-2">Container Instantiation</a></dt>
-<dt>2.1.1.3. <a href="/packages/4.x/Di/getting-started.html#2-1-1-3">Creating Object Instances</a></dt>
+<dt>2.2.1.2. <a href="/packages/4.x/Di/getting-started.html#2-2-1-2">Container Instantiation</a></dt>
+<dt>2.2.1.3. <a href="/packages/4.x/Di/getting-started.html#2-2-1-3">Creating Object Instances</a></dt>
 </dl></dd>
-<dt>2.1.2. <a href="/packages/4.x/Di/constructor.html#2-1-2">Constructor Injection</a></dt>
-<dt>2.1.3. <a href="/packages/4.x/Di/setter.html#2-1-3">Setter Injection</a></dt>
-<dt>2.1.4. <a href="/packages/4.x/Di/mutations.html#2-1-4">Mutate object after instantion</a></dt>
-<dt>2.1.5. <a href="/packages/4.x/Di/inheritance.html#2-1-5">Class, Interface, and Trait Inheritance</a></dt>
+<dt>2.2.2. <a href="/packages/4.x/Di/constructor.html#2-2-2">Constructor Injection</a></dt>
+<dt>2.2.3. <a href="/packages/4.x/Di/setter.html#2-2-3">Setter Injection</a></dt>
+<dt>2.2.4. <a href="/packages/4.x/Di/mutations.html#2-2-4">Mutate object after instantion</a></dt>
+<dt>2.2.5. <a href="/packages/4.x/Di/inheritance.html#2-2-5">Class, Interface, and Trait Inheritance</a></dt>
 <dd><dl>
-<dt>2.1.5.1. <a href="/packages/4.x/Di/inheritance.html#2-1-5-1">Class Inheritance</a></dt>
-<dt>2.1.5.2. <a href="/packages/4.x/Di/inheritance.html#2-1-5-2">Interface And Trait Inheritance</a></dt>
+<dt>2.2.5.1. <a href="/packages/4.x/Di/inheritance.html#2-2-5-1">Class Inheritance</a></dt>
+<dt>2.2.5.2. <a href="/packages/4.x/Di/inheritance.html#2-2-5-2">Interface And Trait Inheritance</a></dt>
 </dl></dd>
-<dt>2.1.6. <a href="/packages/4.x/Di/services.html#2-1-6">Services</a></dt>
-<dt>2.1.7. <a href="/packages/4.x/Di/lazy.html#2-1-7">Lazy Injection</a></dt>
+<dt>2.2.6. <a href="/packages/4.x/Di/services.html#2-2-6">Services</a></dt>
+<dt>2.2.7. <a href="/packages/4.x/Di/lazy.html#2-2-7">Lazy Injection</a></dt>
 <dd><dl>
-<dt>2.1.7.1. <a href="/packages/4.x/Di/lazy.html#2-1-7-1">Lazy Instances</a></dt>
-<dt>2.1.7.2. <a href="/packages/4.x/Di/lazy.html#2-1-7-2">Lazy Services</a></dt>
+<dt>2.2.7.1. <a href="/packages/4.x/Di/lazy.html#2-2-7-1">Lazy Instances</a></dt>
+<dt>2.2.7.2. <a href="/packages/4.x/Di/lazy.html#2-2-7-2">Lazy Services</a></dt>
 <dd><dl>
-<dt>2.1.7.2.1. <a href="/packages/4.x/Di/lazy.html#2-1-7-2-1">Setting</a></dt>
-<dt>2.1.7.2.2. <a href="/packages/4.x/Di/lazy.html#2-1-7-2-2">Getting</a></dt>
-<dt>2.1.7.2.3. <a href="/packages/4.x/Di/lazy.html#2-1-7-2-3">Getting-and-Calling</a></dt>
+<dt>2.2.7.2.1. <a href="/packages/4.x/Di/lazy.html#2-2-7-2-1">Setting</a></dt>
+<dt>2.2.7.2.2. <a href="/packages/4.x/Di/lazy.html#2-2-7-2-2">Getting</a></dt>
+<dt>2.2.7.2.3. <a href="/packages/4.x/Di/lazy.html#2-2-7-2-3">Getting-and-Calling</a></dt>
 </dl></dd>
-<dt>2.1.7.3. <a href="/packages/4.x/Di/lazy.html#2-1-7-3">Lazy Values</a></dt>
-<dt>2.1.7.4. <a href="/packages/4.x/Di/lazy.html#2-1-7-4">Lazy Include and Require</a></dt>
-<dt>2.1.7.5. <a href="/packages/4.x/Di/lazy.html#2-1-7-5">Lazy Array</a></dt>
-<dt>2.1.7.6. <a href="/packages/4.x/Di/lazy.html#2-1-7-6">Lazy Callable</a></dt>
-<dt>2.1.7.7. <a href="/packages/4.x/Di/lazy.html#2-1-7-7">Generic Lazy Calls</a></dt>
+<dt>2.2.7.3. <a href="/packages/4.x/Di/lazy.html#2-2-7-3">Lazy Values</a></dt>
+<dt>2.2.7.4. <a href="/packages/4.x/Di/lazy.html#2-2-7-4">Lazy Include and Require</a></dt>
+<dt>2.2.7.5. <a href="/packages/4.x/Di/lazy.html#2-2-7-5">Lazy Array</a></dt>
+<dt>2.2.7.6. <a href="/packages/4.x/Di/lazy.html#2-2-7-6">Lazy Callable</a></dt>
+<dt>2.2.7.7. <a href="/packages/4.x/Di/lazy.html#2-2-7-7">Generic Lazy Calls</a></dt>
 </dl></dd>
-<dt>2.1.8. <a href="/packages/4.x/Di/factories.html#2-1-8">Instance Factories</a></dt>
+<dt>2.2.8. <a href="/packages/4.x/Di/factories.html#2-2-8">Instance Factories</a></dt>
 <dd><dl>
-<dt>2.1.8.1. <a href="/packages/4.x/Di/factories.html#2-1-8-1">Broader Instantiation</a></dt>
+<dt>2.2.8.1. <a href="/packages/4.x/Di/factories.html#2-2-8-1">Broader Instantiation</a></dt>
 </dl></dd>
-<dt>2.1.9. <a href="/packages/4.x/Di/config.html#2-1-9">Container Builder and Config Classes</a></dt>
-<dt>2.1.10. <a href="/packages/4.x/Di/auto.html#2-1-10">Auto-Resolution Of Constructor Parameters</a></dt>
+<dt>2.2.9. <a href="/packages/4.x/Di/config.html#2-2-9">Container Builder and Config Classes</a></dt>
+<dt>2.2.10. <a href="/packages/4.x/Di/auto.html#2-2-10">Auto-Resolution Of Constructor Parameters</a></dt>
 <dd><dl>
-<dt>2.1.10.1. <a href="/packages/4.x/Di/auto.html#2-1-10-1">Auto-Resolving From Concrete Typehints</a></dt>
-<dt>2.1.10.2. <a href="/packages/4.x/Di/auto.html#2-1-10-2">Auto-Resolving From Abstract and Interface Typehints</a></dt>
-<dt>2.1.10.3. <a href="/packages/4.x/Di/auto.html#2-1-10-3">Auto-Resolving to Services</a></dt>
-<dt>2.1.10.4. <a href="/packages/4.x/Di/auto.html#2-1-10-4">Overriding Auto-Resolution</a></dt>
+<dt>2.2.10.1. <a href="/packages/4.x/Di/auto.html#2-2-10-1">Auto-Resolving From Concrete Typehints</a></dt>
+<dt>2.2.10.2. <a href="/packages/4.x/Di/auto.html#2-2-10-2">Auto-Resolving From Abstract and Interface Typehints</a></dt>
+<dt>2.2.10.3. <a href="/packages/4.x/Di/auto.html#2-2-10-3">Auto-Resolving to Services</a></dt>
+<dt>2.2.10.4. <a href="/packages/4.x/Di/auto.html#2-2-10-4">Overriding Auto-Resolution</a></dt>
 </dl></dd>
-<dt>2.1.11. <a href="/packages/4.x/Di/serializing.html#2-1-11">Serializing the Container</a></dt>
-<dt>2.1.12. <a href="/packages/4.x/Di/migrating.html#2-1-12">Migrating</a></dt>
+<dt>2.2.11. <a href="/packages/4.x/Di/serializing.html#2-2-11">Serializing the Container</a></dt>
+<dt>2.2.12. <a href="/packages/4.x/Di/migrating.html#2-2-12">Migrating</a></dt>
 <dd><dl>
-<dt>2.1.12.1. <a href="/packages/4.x/Di/migrating.html#2-1-12-1">Migrating from 3.x to 4.x</a></dt>
+<dt>2.2.12.1. <a href="/packages/4.x/Di/migrating.html#2-2-12-1">Migrating from 3.x to 4.x</a></dt>
 <dd><dl>
-<dt>2.1.12.1.1. <a href="/packages/4.x/Di/migrating.html#2-1-12-1-1">Dropped PHP 7.1 and lower, no HHVM</a></dt>
-<dt>2.1.12.1.2. <a href="/packages/4.x/Di/migrating.html#2-1-12-1-2">Type-hinting</a></dt>
-<dt>2.1.12.1.3. <a href="/packages/4.x/Di/migrating.html#2-1-12-1-3">InjectionFactory::newInstance()</a></dt>
-<dt>2.1.12.1.4. <a href="/packages/4.x/Di/migrating.html#2-1-12-1-4">Container Interop</a></dt>
-<dt>2.1.12.1.5. <a href="/packages/4.x/Di/migrating.html#2-1-12-1-5">Dropped features</a></dt>
+<dt>2.2.12.1.1. <a href="/packages/4.x/Di/migrating.html#2-2-12-1-1">Dropped PHP 7.1 and lower, no HHVM</a></dt>
+<dt>2.2.12.1.2. <a href="/packages/4.x/Di/migrating.html#2-2-12-1-2">Type-hinting</a></dt>
+<dt>2.2.12.1.3. <a href="/packages/4.x/Di/migrating.html#2-2-12-1-3">InjectionFactory::newInstance()</a></dt>
+<dt>2.2.12.1.4. <a href="/packages/4.x/Di/migrating.html#2-2-12-1-4">Container Interop</a></dt>
+<dt>2.2.12.1.5. <a href="/packages/4.x/Di/migrating.html#2-2-12-1-5">Dropped features</a></dt>
 </dl></dd>
-<dt>2.1.12.2. <a href="/packages/4.x/Di/migrating.html#2-1-12-2">Migrating from 2.x to 3.x</a></dt>
+<dt>2.2.12.2. <a href="/packages/4.x/Di/migrating.html#2-2-12-2">Migrating from 2.x to 3.x</a></dt>
 <dd><dl>
-<dt>2.1.12.2.1. <a href="/packages/4.x/Di/migrating.html#2-1-12-2-1">BC Breaks</a></dt>
+<dt>2.2.12.2.1. <a href="/packages/4.x/Di/migrating.html#2-2-12-2-1">BC Breaks</a></dt>
 <dd><dl>
-<dt>2.1.12.2.1.1. <a href="/packages/4.x/Di/migrating.html#2-1-12-2-1-1">Instantiation</a></dt>
-<dt>2.1.12.2.1.2. <a href="/packages/4.x/Di/migrating.html#2-1-12-2-1-2">
+<dt>2.2.12.2.1.1. <a href="/packages/4.x/Di/migrating.html#2-2-12-2-1-1">Instantiation</a></dt>
+<dt>2.2.12.2.1.2. <a href="/packages/4.x/Di/migrating.html#2-2-12-2-1-2">
 <code>setter</code> vs <code>setters</code>
 </a></dt>
-<dt>2.1.12.2.1.3. <a href="/packages/4.x/Di/migrating.html#2-1-12-2-1-3">Automatic Locking</a></dt>
-<dt>2.1.12.2.1.4. <a href="/packages/4.x/Di/migrating.html#2-1-12-2-1-4">Config vs ContainerConfig</a></dt>
+<dt>2.2.12.2.1.3. <a href="/packages/4.x/Di/migrating.html#2-2-12-2-1-3">Automatic Locking</a></dt>
+<dt>2.2.12.2.1.4. <a href="/packages/4.x/Di/migrating.html#2-2-12-2-1-4">Config vs ContainerConfig</a></dt>
 </dl></dd>
-<dt>2.1.12.2.2. <a href="/packages/4.x/Di/migrating.html#2-1-12-2-2">Features</a></dt>
+<dt>2.2.12.2.2. <a href="/packages/4.x/Di/migrating.html#2-2-12-2-2">Features</a></dt>
 <dd><dl>
-<dt>2.1.12.2.2.1. <a href="/packages/4.x/Di/migrating.html#2-1-12-2-2-1">lazyGetCall()</a></dt>
-<dt>2.1.12.2.2.2. <a href="/packages/4.x/Di/migrating.html#2-1-12-2-2-2">Instance Factories</a></dt>
+<dt>2.2.12.2.2.1. <a href="/packages/4.x/Di/migrating.html#2-2-12-2-2-1">lazyGetCall()</a></dt>
+<dt>2.2.12.2.2.2. <a href="/packages/4.x/Di/migrating.html#2-2-12-2-2-2">Instance Factories</a></dt>
 </dl></dd>
 </dl></dd>
 </dl></dd>
@@ -170,14 +170,14 @@
 <nav class="navfooter">
     <table>
         <tr>
-            <td class="prev"><a href="/packages/4.x/">Prev</a></td>
+            <td class="prev"><a href="/packages/4.x/Accept/getting-started.html">Prev</a></td>
             <td class="parent"><a href="/packages/4.x/">Up</a></td>
             <td class="next"><a href="/packages/4.x/Di/getting-started.html">Next</a></td>
         </tr>
         <tr>
-            <td class="prev">2. Version 4.x</td>
+            <td class="prev">2.1.1. Aura.Accept</td>
             <td class="parent">2. Version 4.x</td>
-            <td class="next">2.1.1. Getting Started</td>
+            <td class="next">2.2.1. Getting Started</td>
         </tr>
     </table>
 </nav>
