--- a/packages/4.x/index.html
+++ b/packages/4.x/index.html
@@ -84,87 +84,95 @@
         <tr>
             <td class="prev"><a href="/packages/5.x/Sql/upgrade.html">3.x Upgrade Notes</a></td>
             <td class="parent">Aura Packages</th>
-            <td class="next"><a href="/packages/4.x/Di/">Aura.Di</a></td>
+            <td class="next"><a href="/packages/4.x/Accept/">Aura.Accept</a></td>
         </tr>
     </table>
 </nav>
 
 <h1>2. Version 4.x</h1>
 <dl>
-<dt>2.1. <a href="/packages/4.x/Di/">Aura.Di</a></dt>
+<dt>2.1. <a href="/packages/4.x/Accept/">Aura.Accept</a></dt>
 <dd><dl>
-<dt>2.1.1. <a href="/packages/4.x/Di/getting-started.html#2-1-1">Getting Started</a></dt>
+<dt>2.1.1. <a href="/packages/4.x/Accept/getting-started.html#2-1-1">Aura.Accept</a></dt>
+<dt>2.1.1. <a href="/packages/4.x/Accept/getting-started.html#2-1-1">Installation</a></dt>
 <dd><dl>
-<dt>2.1.1.1. <a href="/packages/4.x/Di/getting-started.html#2-1-1-1">Overview</a></dt>
-<dt>2.1.1.2. <a href="/packages/4.x/Di/getting-started.html#2-1-1-2">Container Instantiation</a></dt>
-<dt>2.1.1.3. <a href="/packages/4.x/Di/getting-started.html#2-1-1-3">Creating Object Instances</a></dt>
-</dl></dd>
-<dt>2.1.2. <a href="/packages/4.x/Di/constructor.html#2-1-2">Constructor Injection</a></dt>
-<dt>2.1.3. <a href="/packages/4.x/Di/setter.html#2-1-3">Setter Injection</a></dt>
-<dt>2.1.4. <a href="/packages/4.x/Di/mutations.html#2-1-4">Mutate object after instantion</a></dt>
-<dt>2.1.5. <a href="/packages/4.x/Di/inheritance.html#2-1-5">Class, Interface, and Trait Inheritance</a></dt>
-<dd><dl>
-<dt>2.1.5.1. <a href="/packages/4.x/Di/inheritance.html#2-1-5-1">Class Inheritance</a></dt>
-<dt>2.1.5.2. <a href="/packages/4.x/Di/inheritance.html#2-1-5-2">Interface And Trait Inheritance</a></dt>
-</dl></dd>
-<dt>2.1.6. <a href="/packages/4.x/Di/services.html#2-1-6">Services</a></dt>
-<dt>2.1.7. <a href="/packages/4.x/Di/lazy.html#2-1-7">Lazy Injection</a></dt>
-<dd><dl>
-<dt>2.1.7.1. <a href="/packages/4.x/Di/lazy.html#2-1-7-1">Lazy Instances</a></dt>
-<dt>2.1.7.2. <a href="/packages/4.x/Di/lazy.html#2-1-7-2">Lazy Services</a></dt>
-<dt>2.1.7.3. <a href="/packages/4.x/Di/lazy.html#2-1-7-3">Lazy Values</a></dt>
-<dt>2.1.7.4. <a href="/packages/4.x/Di/lazy.html#2-1-7-4">Lazy Include and Require</a></dt>
-<dt>2.1.7.5. <a href="/packages/4.x/Di/lazy.html#2-1-7-5">Lazy Array</a></dt>
-<dt>2.1.7.6. <a href="/packages/4.x/Di/lazy.html#2-1-7-6">Lazy Callable</a></dt>
-<dt>2.1.7.7. <a href="/packages/4.x/Di/lazy.html#2-1-7-7">Generic Lazy Calls</a></dt>
-</dl></dd>
-<dt>2.1.8. <a href="/packages/4.x/Di/factories.html#2-1-8">Instance Factories</a></dt>
-<dd><dl>
-<dt>2.1.8.1. <a href="/packages/4.x/Di/factories.html#2-1-8-1">Broader Instantiation</a></dt>
-</dl></dd>
-<dt>2.1.9. <a href="/packages/4.x/Di/config.html#2-1-9">Container Builder and Config Classes</a></dt>
-<dt>2.1.10. <a href="/packages/4.x/Di/auto.html#2-1-10">Auto-Resolution Of Constructor Parameters</a></dt>
-<dd><dl>
-<dt>2.1.10.1. <a href="/packages/4.x/Di/auto.html#2-1-10-1">Auto-Resolving From Concrete Typehints</a></dt>
-<dt>2.1.10.2. <a href="/packages/4.x/Di/auto.html#2-1-10-2">Auto-Resolving From Abstract and Interface Typehints</a></dt>
-<dt>2.1.10.3. <a href="/packages/4.x/Di/auto.html#2-1-10-3">Auto-Resolving to Services</a></dt>
-<dt>2.1.10.4. <a href="/packages/4.x/Di/auto.html#2-1-10-4">Overriding Auto-Resolution</a></dt>
-</dl></dd>
-<dt>2.1.11. <a href="/packages/4.x/Di/serializing.html#2-1-11">Serializing the Container</a></dt>
-<dt>2.1.12. <a href="/packages/4.x/Di/migrating.html#2-1-12">Migrating</a></dt>
-<dd><dl>
-<dt>2.1.12.1. <a href="/packages/4.x/Di/migrating.html#2-1-12-1">Migrating from 3.x to 4.x</a></dt>
-<dt>2.1.12.2. <a href="/packages/4.x/Di/migrating.html#2-1-12-2">Migrating from 2.x to 3.x</a></dt>
+<dt>2.1.1.1. <a href="/packages/4.x/Accept/getting-started.html#2-1-1-1">Getting Started</a></dt>
 </dl></dd>
 </dl></dd>
-<dt>2.2. <a href="/packages/4.x/Sql/">Aura.Sql</a></dt>
+<dt>2.2. <a href="/packages/4.x/Di/">Aura.Di</a></dt>
 <dd><dl>
-<dt>2.2.1. <a href="/packages/4.x/Sql/getting-started.html#2-2-1">Getting Started</a></dt>
+<dt>2.2.1. <a href="/packages/4.x/Di/getting-started.html#2-2-1">Getting Started</a></dt>
 <dd><dl>
-<dt>2.2.1.1. <a href="/packages/4.x/Sql/getting-started.html#2-2-1-1">Instantiation</a></dt>
-<dt>2.2.1.2. <a href="/packages/4.x/Sql/getting-started.html#2-2-1-2">Array Quoting</a></dt>
-<dt>2.2.1.3. <a href="/packages/4.x/Sql/getting-started.html#2-2-1-3">The <code>perform()</code> Method</a></dt>
+<dt>2.2.1.1. <a href="/packages/4.x/Di/getting-started.html#2-2-1-1">Overview</a></dt>
+<dt>2.2.1.2. <a href="/packages/4.x/Di/getting-started.html#2-2-1-2">Container Instantiation</a></dt>
+<dt>2.2.1.3. <a href="/packages/4.x/Di/getting-started.html#2-2-1-3">Creating Object Instances</a></dt>
 </dl></dd>
-<dt>2.2.2. <a href="/packages/4.x/Sql/fetch.html#2-2-2">The <code>fetch*()</code> Methods</a></dt>
-<dt>2.2.3. <a href="/packages/4.x/Sql/yield.html#2-2-3">The <code>yield*()</code> Methods</a></dt>
-<dt>2.2.4. <a href="/packages/4.x/Sql/profiling-logging.html#2-2-4">Profiling and Logging</a></dt>
+<dt>2.2.2. <a href="/packages/4.x/Di/constructor.html#2-2-2">Constructor Injection</a></dt>
+<dt>2.2.3. <a href="/packages/4.x/Di/setter.html#2-2-3">Setter Injection</a></dt>
+<dt>2.2.4. <a href="/packages/4.x/Di/mutations.html#2-2-4">Mutate object after instantion</a></dt>
+<dt>2.2.5. <a href="/packages/4.x/Di/inheritance.html#2-2-5">Class, Interface, and Trait Inheritance</a></dt>
 <dd><dl>
-<dt>2.2.4.1. <a href="/packages/4.x/Sql/profiling-logging.html#2-2-4-1">Using The Profiler</a></dt>
-<dt>2.2.4.2. <a href="/packages/4.x/Sql/profiling-logging.html#2-2-4-2">Other Logger Implementations</a></dt>
-<dt>2.2.4.3. <a href="/packages/4.x/Sql/profiling-logging.html#2-2-4-3">Profiler Log Messages</a></dt>
-<dt>2.2.4.4. <a href="/packages/4.x/Sql/profiling-logging.html#2-2-4-4">Profiler Log Level</a></dt>
+<dt>2.2.5.1. <a href="/packages/4.x/Di/inheritance.html#2-2-5-1">Class Inheritance</a></dt>
+<dt>2.2.5.2. <a href="/packages/4.x/Di/inheritance.html#2-2-5-2">Interface And Trait Inheritance</a></dt>
 </dl></dd>
-<dt>2.2.5. <a href="/packages/4.x/Sql/connection-locator.html#2-2-5">Connection Locator</a></dt>
+<dt>2.2.6. <a href="/packages/4.x/Di/services.html#2-2-6">Services</a></dt>
+<dt>2.2.7. <a href="/packages/4.x/Di/lazy.html#2-2-7">Lazy Injection</a></dt>
 <dd><dl>
-<dt>2.2.5.1. <a href="/packages/4.x/Sql/connection-locator.html#2-2-5-1">Runtime Configuration</a></dt>
-<dt>2.2.5.2. <a href="/packages/4.x/Sql/connection-locator.html#2-2-5-2">Construction-Time Configuration</a></dt>
+<dt>2.2.7.1. <a href="/packages/4.x/Di/lazy.html#2-2-7-1">Lazy Instances</a></dt>
+<dt>2.2.7.2. <a href="/packages/4.x/Di/lazy.html#2-2-7-2">Lazy Services</a></dt>
+<dt>2.2.7.3. <a href="/packages/4.x/Di/lazy.html#2-2-7-3">Lazy Values</a></dt>
+<dt>2.2.7.4. <a href="/packages/4.x/Di/lazy.html#2-2-7-4">Lazy Include and Require</a></dt>
+<dt>2.2.7.5. <a href="/packages/4.x/Di/lazy.html#2-2-7-5">Lazy Array</a></dt>
+<dt>2.2.7.6. <a href="/packages/4.x/Di/lazy.html#2-2-7-6">Lazy Callable</a></dt>
+<dt>2.2.7.7. <a href="/packages/4.x/Di/lazy.html#2-2-7-7">Generic Lazy Calls</a></dt>
 </dl></dd>
-<dt>2.2.6. <a href="/packages/4.x/Sql/upgrade.html#2-2-6">3.x Upgrade Notes</a></dt>
+<dt>2.2.8. <a href="/packages/4.x/Di/factories.html#2-2-8">Instance Factories</a></dt>
 <dd><dl>
-<dt>2.2.6.1. <a href="/packages/4.x/Sql/upgrade.html#2-2-6-1">Rebuilder and Parsers</a></dt>
-<dt>2.2.6.2. <a href="/packages/4.x/Sql/upgrade.html#2-2-6-2">Profiling and Logging</a></dt>
-<dt>2.2.6.3. <a href="/packages/4.x/Sql/upgrade.html#2-2-6-3">Instantiation</a></dt>
-<dt>2.2.6.4. <a href="/packages/4.x/Sql/upgrade.html#2-2-6-4">Miscellaneous</a></dt>
+<dt>2.2.8.1. <a href="/packages/4.x/Di/factories.html#2-2-8-1">Broader Instantiation</a></dt>
+</dl></dd>
+<dt>2.2.9. <a href="/packages/4.x/Di/config.html#2-2-9">Container Builder and Config Classes</a></dt>
+<dt>2.2.10. <a href="/packages/4.x/Di/auto.html#2-2-10">Auto-Resolution Of Constructor Parameters</a></dt>
+<dd><dl>
+<dt>2.2.10.1. <a href="/packages/4.x/Di/auto.html#2-2-10-1">Auto-Resolving From Concrete Typehints</a></dt>
+<dt>2.2.10.2. <a href="/packages/4.x/Di/auto.html#2-2-10-2">Auto-Resolving From Abstract and Interface Typehints</a></dt>
+<dt>2.2.10.3. <a href="/packages/4.x/Di/auto.html#2-2-10-3">Auto-Resolving to Services</a></dt>
+<dt>2.2.10.4. <a href="/packages/4.x/Di/auto.html#2-2-10-4">Overriding Auto-Resolution</a></dt>
+</dl></dd>
+<dt>2.2.11. <a href="/packages/4.x/Di/serializing.html#2-2-11">Serializing the Container</a></dt>
+<dt>2.2.12. <a href="/packages/4.x/Di/migrating.html#2-2-12">Migrating</a></dt>
+<dd><dl>
+<dt>2.2.12.1. <a href="/packages/4.x/Di/migrating.html#2-2-12-1">Migrating from 3.x to 4.x</a></dt>
+<dt>2.2.12.2. <a href="/packages/4.x/Di/migrating.html#2-2-12-2">Migrating from 2.x to 3.x</a></dt>
+</dl></dd>
+</dl></dd>
+<dt>2.3. <a href="/packages/4.x/Sql/">Aura.Sql</a></dt>
+<dd><dl>
+<dt>2.3.1. <a href="/packages/4.x/Sql/getting-started.html#2-3-1">Getting Started</a></dt>
+<dd><dl>
+<dt>2.3.1.1. <a href="/packages/4.x/Sql/getting-started.html#2-3-1-1">Instantiation</a></dt>
+<dt>2.3.1.2. <a href="/packages/4.x/Sql/getting-started.html#2-3-1-2">Array Quoting</a></dt>
+<dt>2.3.1.3. <a href="/packages/4.x/Sql/getting-started.html#2-3-1-3">The <code>perform()</code> Method</a></dt>
+</dl></dd>
+<dt>2.3.2. <a href="/packages/4.x/Sql/fetch.html#2-3-2">The <code>fetch*()</code> Methods</a></dt>
+<dt>2.3.3. <a href="/packages/4.x/Sql/yield.html#2-3-3">The <code>yield*()</code> Methods</a></dt>
+<dt>2.3.4. <a href="/packages/4.x/Sql/profiling-logging.html#2-3-4">Profiling and Logging</a></dt>
+<dd><dl>
+<dt>2.3.4.1. <a href="/packages/4.x/Sql/profiling-logging.html#2-3-4-1">Using The Profiler</a></dt>
+<dt>2.3.4.2. <a href="/packages/4.x/Sql/profiling-logging.html#2-3-4-2">Other Logger Implementations</a></dt>
+<dt>2.3.4.3. <a href="/packages/4.x/Sql/profiling-logging.html#2-3-4-3">Profiler Log Messages</a></dt>
+<dt>2.3.4.4. <a href="/packages/4.x/Sql/profiling-logging.html#2-3-4-4">Profiler Log Level</a></dt>
+</dl></dd>
+<dt>2.3.5. <a href="/packages/4.x/Sql/connection-locator.html#2-3-5">Connection Locator</a></dt>
+<dd><dl>
+<dt>2.3.5.1. <a href="/packages/4.x/Sql/connection-locator.html#2-3-5-1">Runtime Configuration</a></dt>
+<dt>2.3.5.2. <a href="/packages/4.x/Sql/connection-locator.html#2-3-5-2">Construction-Time Configuration</a></dt>
+</dl></dd>
+<dt>2.3.6. <a href="/packages/4.x/Sql/upgrade.html#2-3-6">3.x Upgrade Notes</a></dt>
+<dd><dl>
+<dt>2.3.6.1. <a href="/packages/4.x/Sql/upgrade.html#2-3-6-1">Rebuilder and Parsers</a></dt>
+<dt>2.3.6.2. <a href="/packages/4.x/Sql/upgrade.html#2-3-6-2">Profiling and Logging</a></dt>
+<dt>2.3.6.3. <a href="/packages/4.x/Sql/upgrade.html#2-3-6-3">Instantiation</a></dt>
+<dt>2.3.6.4. <a href="/packages/4.x/Sql/upgrade.html#2-3-6-4">Miscellaneous</a></dt>
 </dl></dd>
 </dl></dd>
 </dl>
@@ -174,12 +182,12 @@
         <tr>
             <td class="prev"><a href="/packages/5.x/Sql/upgrade.html">Prev</a></td>
             <td class="parent"><a href="/packages/">Up</a></td>
-            <td class="next"><a href="/packages/4.x/Di/">Next</a></td>
+            <td class="next"><a href="/packages/4.x/Accept/">Next</a></td>
         </tr>
         <tr>
             <td class="prev">1.1.6. 3.x Upgrade Notes</td>
             <td class="parent">Aura Packages</td>
-            <td class="next">2.1. Aura.Di</td>
+            <td class="next">2.1. Aura.Accept</td>
         </tr>
     </table>
 </nav>
