--- a/packages/index.html
+++ b/packages/index.html
@@ -105,29 +105,34 @@
 </dl></dd>
 <dt>2. <a href="/packages/4.x/">Version 4.x</a></dt>
 <dd><dl>
-<dt>2.1. <a href="/packages/4.x/Di/">Aura.Di</a></dt>
+<dt>2.1. <a href="/packages/4.x/Accept/">Aura.Accept</a></dt>
 <dd><dl>
-<dt>2.1.1. <a href="/packages/4.x/Di/getting-started.html#2-1-1">Getting Started</a></dt>
-<dt>2.1.2. <a href="/packages/4.x/Di/constructor.html#2-1-2">Constructor Injection</a></dt>
-<dt>2.1.3. <a href="/packages/4.x/Di/setter.html#2-1-3">Setter Injection</a></dt>
-<dt>2.1.4. <a href="/packages/4.x/Di/mutations.html#2-1-4">Mutate object after instantion</a></dt>
-<dt>2.1.5. <a href="/packages/4.x/Di/inheritance.html#2-1-5">Class, Interface, and Trait Inheritance</a></dt>
-<dt>2.1.6. <a href="/packages/4.x/Di/services.html#2-1-6">Services</a></dt>
-<dt>2.1.7. <a href="/packages/4.x/Di/lazy.html#2-1-7">Lazy Injection</a></dt>
-<dt>2.1.8. <a href="/packages/4.x/Di/factories.html#2-1-8">Instance Factories</a></dt>
-<dt>2.1.9. <a href="/packages/4.x/Di/config.html#2-1-9">Container Builder and Config Classes</a></dt>
-<dt>2.1.10. <a href="/packages/4.x/Di/auto.html#2-1-10">Auto-Resolution Of Constructor Parameters</a></dt>
-<dt>2.1.11. <a href="/packages/4.x/Di/serializing.html#2-1-11">Serializing the Container</a></dt>
-<dt>2.1.12. <a href="/packages/4.x/Di/migrating.html#2-1-12">Migrating</a></dt>
+<dt>2.1.1. <a href="/packages/4.x/Accept/getting-started.html#2-1-1">Aura.Accept</a></dt>
+<dt>2.1.1. <a href="/packages/4.x/Accept/getting-started.html#2-1-1">Installation</a></dt>
 </dl></dd>
-<dt>2.2. <a href="/packages/4.x/Sql/">Aura.Sql</a></dt>
+<dt>2.2. <a href="/packages/4.x/Di/">Aura.Di</a></dt>
 <dd><dl>
-<dt>2.2.1. <a href="/packages/4.x/Sql/getting-started.html#2-2-1">Getting Started</a></dt>
-<dt>2.2.2. <a href="/packages/4.x/Sql/fetch.html#2-2-2">The <code>fetch*()</code> Methods</a></dt>
-<dt>2.2.3. <a href="/packages/4.x/Sql/yield.html#2-2-3">The <code>yield*()</code> Methods</a></dt>
-<dt>2.2.4. <a href="/packages/4.x/Sql/profiling-logging.html#2-2-4">Profiling and Logging</a></dt>
-<dt>2.2.5. <a href="/packages/4.x/Sql/connection-locator.html#2-2-5">Connection Locator</a></dt>
-<dt>2.2.6. <a href="/packages/4.x/Sql/upgrade.html#2-2-6">3.x Upgrade Notes</a></dt>
+<dt>2.2.1. <a href="/packages/4.x/Di/getting-started.html#2-2-1">Getting Started</a></dt>
+<dt>2.2.2. <a href="/packages/4.x/Di/constructor.html#2-2-2">Constructor Injection</a></dt>
+<dt>2.2.3. <a href="/packages/4.x/Di/setter.html#2-2-3">Setter Injection</a></dt>
+<dt>2.2.4. <a href="/packages/4.x/Di/mutations.html#2-2-4">Mutate object after instantion</a></dt>
+<dt>2.2.5. <a href="/packages/4.x/Di/inheritance.html#2-2-5">Class, Interface, and Trait Inheritance</a></dt>
+<dt>2.2.6. <a href="/packages/4.x/Di/services.html#2-2-6">Services</a></dt>
+<dt>2.2.7. <a href="/packages/4.x/Di/lazy.html#2-2-7">Lazy Injection</a></dt>
+<dt>2.2.8. <a href="/packages/4.x/Di/factories.html#2-2-8">Instance Factories</a></dt>
+<dt>2.2.9. <a href="/packages/4.x/Di/config.html#2-2-9">Container Builder and Config Classes</a></dt>
+<dt>2.2.10. <a href="/packages/4.x/Di/auto.html#2-2-10">Auto-Resolution Of Constructor Parameters</a></dt>
+<dt>2.2.11. <a href="/packages/4.x/Di/serializing.html#2-2-11">Serializing the Container</a></dt>
+<dt>2.2.12. <a href="/packages/4.x/Di/migrating.html#2-2-12">Migrating</a></dt>
+</dl></dd>
+<dt>2.3. <a href="/packages/4.x/Sql/">Aura.Sql</a></dt>
+<dd><dl>
+<dt>2.3.1. <a href="/packages/4.x/Sql/getting-started.html#2-3-1">Getting Started</a></dt>
+<dt>2.3.2. <a href="/packages/4.x/Sql/fetch.html#2-3-2">The <code>fetch*()</code> Methods</a></dt>
+<dt>2.3.3. <a href="/packages/4.x/Sql/yield.html#2-3-3">The <code>yield*()</code> Methods</a></dt>
+<dt>2.3.4. <a href="/packages/4.x/Sql/profiling-logging.html#2-3-4">Profiling and Logging</a></dt>
+<dt>2.3.5. <a href="/packages/4.x/Sql/connection-locator.html#2-3-5">Connection Locator</a></dt>
+<dt>2.3.6. <a href="/packages/4.x/Sql/upgrade.html#2-3-6">3.x Upgrade Notes</a></dt>
 </dl></dd>
 </dl></dd>
 <dt>3. <a href="/packages/3.x/">Version 3.x</a></dt>
